operations/istio/dev/gw-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: rentit-gateway
spec:
  selector:
    app: istio-ingress # use istio default controller
    # istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rentit-vs
spec:
  hosts:
  - "*"
  gateways:
  - rentit-gateway
  http:
  - match:
    - uri:
        regex: /api/product/?(.*)
    route:
    - destination:
        host: product-service
        port:
          number: 3000
  - match:
    - uri:
        regex: /api/payment/?(.*)
    route:
    - destination:
        host: payment-service
        port:
          number: 3000
  - match:
    - uri:
        regex: /api/user/?(.*)
    route:
    - destination:
        host: auth-service
        port:
          number: 3000
  - match:
    - uri:
        regex: /api/rentit/?(.*)
    route:
    - destination:
        host: rentit-service
        port:
          number: 3000
  - match:
    - uri:
        regex: /?(.*)
    route:
    - destination:
        host: frontend-service
        port:
          number: 3000
